--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "n-readlines": "^1.0.0",
     "querystring": "*",
     "sockjs": "*",
+    "tofixed": "^1.0.0",
     "uuid": "^8.3.0",
     "ws": "^7.3.1"
   }
