--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "node-api.js",
   "dependencies": {
+    "express": "^4.17.1",
     "line-reader": "^0.4.0",
     "n-readlines": "^1.0.0",
     "tofixed": "^1.0.0",
